Updated design a little.

--- a/src/template.html
+++ b/src/template.html
@@ -15,6 +15,19 @@
 	     lazily loaded when it precaches secondary pages -->
 	%sapper.styles%
 
+	<style>
+		@import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap");
+		
+		* {
+      font-family: "Exo 2", sans-serif;
+    }
+
+		@font-face {
+			font-family: Gotham-Thin;
+			src: url('14014.otf');
+		}
+	</style>
+
 	<!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
 	%sapper.head%
