--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
 	%sapper.base%
 
 	<link rel='stylesheet' href='global.css'>
+	<link rel="stylesheet" href="fonts/Gilroy/stylesheet.css">
 	<!-- <link rel='manifest' href='manifest.json'> -->
 
 	<!-- Sapper generates a <style> tag containing critical CSS
@@ -16,15 +17,15 @@
 	%sapper.styles%
 
 	<style>
-		@import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap");
+		/* @import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap"); */
 		
 		* {
-      font-family: "Exo 2", sans-serif;
+      font-family: "Gilroy", sans-serif;
     }
 
 		@font-face {
 			font-family: Gotham-Thin;
-			src: url('14014.otf');
+			src: url('fonts/Gotham-Thin.otf');
 		}
 	</style>
 
