Changed landing pages, changed authorization page.

--- a/src/template.html
+++ b/src/template.html
@@ -27,6 +27,23 @@
 			font-family: Gotham-Thin;
 			src: url('fonts/Gotham-Thin.otf');
 		}
+
+		@font-face {
+			font-family: Holiday;
+			src: url('fonts/Holiday.otf');
+		}
+
+		/* width */
+		::-webkit-scrollbar {
+			width: 8px;
+			height: 8px;
+		}
+		
+		/* Handle */
+		::-webkit-scrollbar-thumb {
+			background: #D2D2D7;
+			border-radius: 10px;
+		}
 	</style>
 
 	<!-- This contains the contents of the <svelte:head> component, if
