Huge update. Updated to new Wavees Core and done authorization and callbacks

--- a/src/template.html
+++ b/src/template.html
@@ -51,6 +51,12 @@
 	%sapper.head%
 </head>
 <body>
+	<script
+		src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+		crossorigin="anonymous"
+	></script>
+	<script src="./js/pincode.js"></script>
 	<!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
 	<div id='sapper'>%sapper.html%</div>
