--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,11 @@
 	<style>
 		/* @import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap"); */
 		
+		body,html {
+			margin: 0;
+			padding: 0;
+		}
+
 		* {
       font-family: "Gilroy", sans-serif;
     }
