--- a/src/template.html
+++ b/src/template.html
@@ -9,21 +9,11 @@
 
 	<link rel='stylesheet' href='global.css'>
 	<link rel="stylesheet" href="fonts/Gilroy/stylesheet.css">
-	<!-- <link rel='manifest' href='manifest.json'> -->
+	<link rel='manifest' href='manifest.json'>
 
-	<!-- Sapper generates a <style> tag containing critical CSS
-	     for the current page. CSS for the rest of the app is
-	     lazily loaded when it precaches secondary pages -->
 	%sapper.styles%
 
 	<style>
-		/* @import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap"); */
-		
-		body,html {
-			margin: 0;
-			padding: 0;
-		}
-
 		* {
       font-family: "Gilroy", sans-serif;
     }
@@ -51,24 +41,17 @@
 		}
 	</style>
 
-	<!-- This contains the contents of the <svelte:head> component, if
-	     the current page has one -->
 	%sapper.head%
 </head>
 <body>
+	<div id='sapper'>%sapper.html%</div>
+
+	%sapper.scripts%
+
 	<script
 		src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 		crossorigin="anonymous"
 	></script>
-	<script src="./js/pincode.js"></script>
-	<!-- The application will be rendered inside this element,
-	     because `src/client.js` references it -->
-	<div id='sapper'>%sapper.html%</div>
-
-	<!-- Sapper creates a <script> tag containing `src/client.js`
-	     and anything else it needs to hydrate the app and
-	     initialise the router -->
-	%sapper.scripts%
 </body>
 </html>
